--- a/assets/main.css
+++ b/assets/main.css
@@ -318,7 +318,8 @@ table td {
     margin-right: 0;
   }
   .post-content {
-    width: 100%;
+    width: 100% !important;
+    padding: 5px;
   }
 }
 
