--- a/assets/main.css
+++ b/assets/main.css
@@ -321,6 +321,10 @@ table td {
     width: 98% !important;
     padding: 5px;
   }
+  .image-width{
+    width: 98%;
+    padding: 5px;
+  }
 }
 
 /** Site footer */
