--- a/assets/main.css
+++ b/assets/main.css
@@ -327,6 +327,14 @@ table td {
   }
 }
 
+.post-content ul li{
+  background: #f2f2f2;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
 /** Site footer */
 .site-footer {
   border-top: 1px solid #e8e8e8;
