--- a/assets/main.css
+++ b/assets/main.css
@@ -338,6 +338,7 @@ table td {
   margin: 10px;
   border-radius: 5px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  border: 1px solid #ccc;
 }
 
 .post-content ul{
